--- a/templates/base.html
+++ b/templates/base.html
@@ -4,20 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Project Title{% endblock %}</title>
+
+    {% load compress %}
+
+    {% compress css %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
-    {% block header %}{% endblock %}
+    {% endcompress %}
 
-    {% if GA %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', '{{ GA }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif %}
+    {% block header %}{% endblock %}
 </head>
 <body>
 
@@ -55,8 +50,22 @@
     {% block content %}{% endblock %}
 </div>
 
+{% compress js %}
 <script src="{% static 'js/jquery.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
+
+{% if GA %}
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', '{{ GA }}', 'auto');
+  ga('send', 'pageview');
+</script>
+{% endif %}
+{% endcompress %}
 
 {% block scripts %}{% endblock %}
 
