--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,27 @@
 {% load staticfiles %}
+{% load compress %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Project Title{% endblock %}</title>
 
-    {% load compress %}
+    <link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {% compress css %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
+        <link rel="stylesheet" href="{% static 'vendor/bulma/css/bulma.css' %}">
+        <link rel="stylesheet" href="{% static 'vendor/components-font-awesome/css/font-awesome.min.css' %}">
+
+        {#stylus#}
+        <link type="text/stylus" rel="stylesheet" href="{% static 'src/styl/main.styl' %}">
     {% endcompress %}
 
     {% block header %}{% endblock %}
 </head>
 <body>
-
+<div id="root"></div>
 <nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
@@ -50,22 +56,22 @@
     {% block content %}{% endblock %}
 </div>
 
-{% compress js %}
-<script src="{% static 'js/jquery.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
+    {% compress js %}
+        {#dependencies#}
+        <script src="{% static 'vendor/velocity/velocity.min.js' %}"></script>
+        <script src="{% static 'vendor/velocity/velocity.ui.min.js' %}"></script>
 
-
-{% if GA %}
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', '{{ GA }}', 'auto');
-  ga('send', 'pageview');
-</script>
-{% endif %}
-{% endcompress %}
+        {% if GA %}
+            <script>
+              (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+              })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+              ga('create', '{{ GA }}', 'auto');
+              ga('send', 'pageview');
+            </script>
+        {% endif %}
+    {% endcompress %}
 
 {% block scripts %}{% endblock %}
 
